# resume-screener-mcp

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
src/resume_screener/: __init__.py  anonymize.py  collect.py  dedup.py  email_drafts.py  export.py  extractor.py  fields.py  knockout.py  mailer.py  ocr.py  prefilter.py  server.py
talk/deck/: build_deck.py
tests/: generate_samples.py  test_anonymize.py  test_collect.py  test_dedup.py  test_email_drafts.py  test_export.py  test_extractor.py  test_fields.py  test_knockout.py  test_mailer.py  test_ocr.py  test_prefilter.py  test_server.py
