[project]
name = "resume-screener-mcp"
version = "0.1.0"
description = "MCP server that screens a folder of resumes against a job description for Claude Code."
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pypdf",
    "python-docx",
    "scikit-learn",
    "openpyxl",
]

[project.optional-dependencies]
# OCR is optional: `pip install 'resume-screener-mcp[ocr]'` (or uvx --with).
# Also requires the system binaries Tesseract (OCR engine) and Poppler (PDF
# rendering). Without these, scanned PDFs are reported as unreadable as before.
ocr = [
    "pytesseract",
    "pdf2image",
]

[project.scripts]
resume-screener-mcp = "resume_screener.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_screener"]

[dependency-groups]
dev = [
    "pytest",
    "reportlab",
]
